@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8b23806e5866e76b6bbb73c87087783b4ee29d2e ChangeLog
+SHA1 202e3b3af2f7210435ca781210a065eba89e4a05 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 003545645bbafb864d94b5ac31c49197db38e4c1 META.yml
-SHA1 e083fd1e4028c2d5b57be8df9b6f0da5db37ec29 MYMETA.json
-SHA1 740a2d029b4d88e66ddba740a60bea9f76f7f10f MYMETA.yml
-SHA1 9d03958e6fdbd1769634c6e9cf28ec3190135f93 Makefile.PL
+SHA1 b7f2b6b851f97c5fd3708ef91da27a77327d2e06 META.yml
+SHA1 10d30b235ce37c529cd2e8752295aad3276f3984 MYMETA.json
+SHA1 c0a80536d3fe4c12a2d7abfc8adf50c55354d52d MYMETA.yml
+SHA1 141cd8838c801f13b062eed50ac03d1ece4fe426 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 ddf801171640b00a34582742cf10177c1dc89065 lib/Net/FullAuto.pm
+SHA1 21697e56e56b675d2036b57c0c8e6a7177db0da9 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,13 +50,13 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 0b6b0cb53f18b1d2b8e2dcd46922360b13f3cc57 lib/Net/FullAuto/FA_Core.pm
+SHA1 9a749b2462f42024422fed406f1d7dc8b3cc0365 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlD3AiYACgkQJM3IZYB6aOrTOACgg3Ge9eGTzmrEaIIyE9CcLheq
-nDcAnjLpa7r5BNp7AxMxI3c+04dLISWZ
-=Vm9U
+iEYEARECAAYFAlEBqcwACgkQJM3IZYB6aOrk5gCeIp25+Pk0a2GokFO4cjZXPlsD
+ducAn3HmJJMoqYTFUs8tfGJq91e1sEoX
+=YIwq
 -----END PGP SIGNATURE-----
